Fixed toast css on mobile screens, 576px view and 768px view

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
   position: absolute;
   z-index: 10;
   top: 100px;
-  left: 75%;
+  left: 22%;
   max-width: 270px;
   width: inherit;
 }
@@ -211,15 +211,38 @@ main .icons a:hover {
   .technologies img {
     width: 22px;
   }
+
+  .toast {
+    left: 14%;
+  }
+}
+
+@media all and (min-width: 411px) {
+  .toast {
+    left: 27%;
+  }
+}
+
+@media all and (min-width: 576px) {
+  .toast {
+    left: 45%;
+  }
 }
 
 @media all and (max-width: 767px) {
   .larger-screens {
     display: none;
   }
+
+  .xl-screens {
+    display: none;
+  }
 }
 
 @media all and (min-width: 768px) {
+  .toast {
+    left: 60%;
+  }
   /* Homepage Header styling */
   h1.lg-heading,
   h2.lg-heading,
@@ -297,6 +320,9 @@ main .icons a:hover {
 }
 
 @media all and (min-width: 992px) {
+  .toast {
+    left: 67%;
+  }
   /* Work Page */
   .item a {
     display: flex;
@@ -313,6 +339,10 @@ main .icons a:hover {
 }
 
 @media all and (min-width: 1200px) {
+  .toast {
+    left: 75%;
+  }
+
   .sm-heading.work {
     font-size: 27px !important;
   }
