--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -36,7 +36,7 @@ a:hover {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 50;
   position: fixed;
 }
 
